--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
 <body class="fondo">
 
-    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #b71c1c;">
+
+
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #2f2252;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="color: white;">
                 <img src="./img/avenges-logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
@@ -45,17 +48,21 @@
         </div>
     </nav>
 
+    <!-- END NAVIGATION -->
+
+
+    <!-- CAROUSEL -->
 
     <div id="demo" class="carousel slide carouselcss" data-bs-ride="carousel">
 
-        <!-- Indicators/dots -->
+
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
             <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
         </div>
 
-        <!-- The slideshow/carousel -->
+
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="./img/carousel-1.png" alt="Avengers" class="d-block w-100" height="650px">
@@ -68,7 +75,7 @@
             </div>
         </div>
 
-        <!-- Left and right controls/icons -->
+
         <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
         </button>
@@ -77,27 +84,47 @@
         </button>
     </div>
 
-    <div class="contenido">
-        <div class="container px-4 fondo-contenido">
-            <div class="row gx-5 fondo-contenido">
-                <div class="col fondo-contenido">
-                    <div class="p-3 border bg-light">
-                        <h3 class="text-center fondo-contenido" style="color: white; padding:10px;">Avengers principales
-                        </h3>
-                        <div class="list-group fondo-contenido">
 
-                            <div class="container-avenger">
-                                <img src="./img/iron-man.png" class="img-thumbnail" alt="Iron Man" width="766px"
+    <!-- END CAROUSEL -->
+
+
+
+
+    <!-- CARDS AVENGERS -->
+
+    <div class="contenido">
+        <div class="container px-4" style="background-color: #18012b;">
+            <div class="row gx-5 " style="background-color: #18012b;">
+                <div class="col" style="background-color: #18012b;">
+                    <div class="p-3" style="background-color: #18012b;">
+                        <h3 class="text-center fondo-contenido border border-primary"
+                            style="color: white; padding:10px;">Avengers
+                            principales
+                        </h3>
+                        <div class="list-group ">
+
+                            <div class="container-avenger fondo-contenido border border-primary border-radius"
+                                style="padding: 20px;">
+                                <img src="./img/iron-man.png" class="img-thumbnail " alt="Iron Man" width="766px"
                                     height="1029px">
-                                <a href="#" class="list-group-item list-group-item-action text-center">Iron Man</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action text-center h5 border border-primary border-radius"
+                                    style="margin-top: 5px;">Iron
+                                    Man</a>
                             </div>
-                            <div class="container-avenger">
+                            <div class="container-avenger fondo-contenido border border-primary border-radius"
+                                style="padding: 20px;">
                                 <img src="./img/thor.png" class="img-thumbnail" alt="Thor" idth="766px" height="1029px">
-                                <a href="#" class="list-group-item list-group-item-action text-center">Thor</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action text-center h5 border border-primary border-radius"
+                                    style="margin-top: 5px;">Thor</a>
                             </div>
-                            <div class="container-avenger">
+                            <div class="container-avenger fondo-contenido border border-primary border-radius"
+                                style="padding: 20px;">
                                 <img src="./img/hulk.png" class="img-thumbnail" alt="Hulk" idth="766px" height="1029px">
-                                <a href="#" class="list-group-item list-group-item-action text-center">Hulk</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action text-center h5 border border-primary border-radius"
+                                    style="margin-top: 5px;">Hulk</a>
                             </div>
 
 
@@ -105,24 +132,35 @@
                         </div>
                     </div>
                 </div>
-                <div class="col fondo-contenido">
-                    <div class="p-3 border bg-light">
-                        <h3 class="text-center fondo-contenido" style="color: white; padding:10px;">Avengers principales
+                <div class="col" style="background-color: #18012b;">
+                    <div class="p-3" style="background-color: #18012b;">
+                        <h3 class="text-center fondo-contenido border border-primary"
+                            style="color: white; padding:10px;">Enemigos principales
                         </h3>
-                        <div class="list-group fondo-contenido">
+                        <div class="list-group ">
 
-                            <div class="container-avenger">
+                            <div class="container-avenger fondo-contenido border border-primary border-radius"
+                                style="padding: 20px;">
                                 <img src="./img/thanos.png" class="img-thumbnail" alt="Thanos" width="766px"
                                     height="1029px">
-                                <a href="#" class="list-group-item list-group-item-action text-center">Thanos</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action text-center h5 border border-primary border-radius"
+                                    style="margin-top: 5px;">Thanos</a>
                             </div>
-                            <div class="container-avenger">
+                            <div class="container-avenger fondo-contenido border border-primary border-radius"
+                                style="padding: 20px;">
                                 <img src="./img/loki.png" class="img-thumbnail" alt="Loki" idth="766px" height="1029px">
-                                <a href="#" class="list-group-item list-group-item-action text-center">Loki</a>
+                                <a href="#"
+                                    class="list-group-item list-group-item-action text-center h5 border border-primary border-radius"
+                                    style="margin-top: 5px;">Loki</a>
                             </div>
-                            <div class="container-avenger">
-                                <img src="./img/hela.png" class="img-thumbnail" alt="Hela" idth="766px" height="1029px">
-                                <a href="#" class="list-group-item list-group-item-action text-center">Hela</a>
+                            <div class="container-avenger fondo-contenido border border-primary border-radius"
+                                style="padding: 20px;">
+                                <img src="./img/hela.png" class="img-thumbnail hela" alt="Hela" idth="766px"
+                                    height="1029px">
+                                <a href="#"
+                                    class="list-group-item list-group-item-action text-center h5 border border-primary border-radius"
+                                    style="margin-top: 5px;">Hela</a>
                             </div>
 
 
@@ -133,10 +171,15 @@
             </div>
         </div>
     </div>
+
+    <!-- END CARDS AVENGERS -->
+
+
+
     </div>
 
 
-    <footer class="text-center text-white footer" style="background-color: #b71c1c;">
+    <footer class="text-center text-white footer" style="background-color: #2f2252;">
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Iframe -->
