--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Avengers</title>
 </head>
 
 <body class="fondo">
@@ -51,6 +51,8 @@
     <!-- END NAVIGATION -->
 
 
+
+
     <!-- CAROUSEL -->
 
     <div id="demo" class="carousel slide carouselcss" data-bs-ride="carousel">
@@ -65,13 +67,13 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./img/carousel-1.png" alt="Avengers" class="d-block w-100" height="650px">
+                <img src="./img/carousel-3.png" alt="Avengers" class="d-block w-100" height="700px">
             </div>
             <div class="carousel-item">
-                <img src="./img/carousel-2.png" alt="Avengers" class="d-block w-100" height="650px">
+                <img src="./img/carousel-2.png" alt="Avengers" class="d-block w-100" height="700px">
             </div>
             <div class="carousel-item">
-                <img src="./img/carousel-3.png" alt="Avengers" class="d-block w-100" height="650px">
+                <img src="./img/carousel-1.png" alt="Avengers" class="d-block w-100" height="700px">
             </div>
         </div>
 
@@ -88,6 +90,7 @@
     <!-- END CAROUSEL -->
 
 
+    <img src="./img/avengers-titulo.png" class="img-fluid center">
 
 
     <!-- CARDS AVENGERS -->
@@ -213,6 +216,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
+    <script src="./script.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
